# rust-book-monorepo

./: .gitignore
adder/src/: add.rs  greeting.rs  guess.rs  lib.rs  print_and_return.rs  rectangle.rs
adder/tests/: integration_test.rs
art/: Cargo.toml
art/src/: lib.rs  main.rs
backyard/src/: main.rs
borrowing/: Cargo.toml
borrowing/src/: main.rs  multiple_mutable_references.rs  mutable_immutable_test.rs  mutable_reference.rs  reference_example.rs  slices_example.rs
cargo_practice/: Cargo.toml
cargo_practice/src/: lib.rs
control_flow/src/: main.rs
enums_practice/: Cargo.toml
enums_practice/src/: better_ips.rs  coins.rs  if_let_practice.rs  ips.rs  main.rs  messenger_test.rs  option_example.rs  option_matching.rs
error-handling-practice/: Cargo.toml
error-handling-practice/src/: error_handling_examples.rs  guessing_game.rs  main.rs  panic_example.rs  recoverable_errors.rs
error_handling_practice/: Cargo.toml  README.md
error_handling_practice/src/: guessing_game.rs  main.rs  recoverable_errors.rs
fibonacci/src/: main.rs
functions/src/: main.rs
generic_types_traits_lifetime/src/: aggregator.rs  combination.rs  first_word.rs  function_abstraction.rs  generic_enums.rs  generic_methods.rs  generic_structs.rs  generics_example.rs  generics_examples.rs  lifetime_structs.rs  lifetimes_examples.rs  main.rs
grep_cli/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/: main
iterators_and_closures/src/: lib.rs  (+3 more)
restaurant/: Cargo.toml
smart_pointers/: Cargo.toml
temperature_calculator/: Cargo.toml
(+25 files in other folders)
