[package]
name = "cargo_practice"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A practice application for testing cargo features."

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
